# Fuzzy_QNN

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES  pyproject.toml  requirements-gpu.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
configs/: breast_cancer_cpu.yaml  breast_cancer_gpu.yaml  debug_cpu.yaml  iris_cpu.yaml  iris_gpu.yaml  synthetic_cpu.yaml  synthetic_gpu.yaml  wine_cpu.yaml  wine_gpu.yaml
research/: claims.md  protocol.md  question.md
runs/breast_cancer_fqnn_cpu/2026-07-08_203602/: best_model.pt  config.yaml  device_info.json  history.csv  history.json  metrics.json  rules.json
runs/breast_cancer_fqnn_cpu/2026-07-09_110226/: fuzzy_parameters.json  history.csv  history.json  metrics.json  model.pt
runs/breast_cancer_fqnn_gpu/2026-07-08_202129/: best_model.pt  config.yaml  device_info.json
runs/breast_cancer_fqnn_gpu/2026-07-08_202154/: config.yaml
runs/cli_smoke_verify/2026-07-08_201545/: config.yaml  history.csv  history.json  metrics.json
runs/debug_cpu/2026-07-08_195301/: best_model.pt  history.csv  history.json  noise_metrics.json  test_metrics.json
runs/debug_cpu/2026-07-08_195451/: device_info.json  history.csv  history.json  test_metrics.json
runs/debug_cpu/2026-07-08_195635/: config.yaml  fuzzy_parameters.json  history.csv  history.json  metrics.json  model.pt
runs/debug_cpu/2026-07-08_195858/: config.yaml  history.csv  history.json  metrics.json
runs/debug_cpu/2026-07-08_200344/: history.csv  history.json  metrics.json
runs/debug_cpu/2026-07-08_201033/: config.yaml  device_info.json  fuzzy_parameters.json  history.csv  history.json  metrics.json
runs/debug_cpu/2026-07-08_201453/: best_model.pt  history.csv  history.json  metrics.json  model.pt  rules.json
scripts/: benchmark_train.py  check_gpu.py  evaluate.py  evaluate_noise.py  inspect_sample.py  run_experiments.py  train.py
src/fuzzy_qnn/: __init__.py  artifacts.py  baselines.py  cli.py  config.py  data.py  device.py  evaluate.py  fuzzy.py  model.py  quantum.py  train.py  utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_device.py  test_fuzzy.py  test_gpu_optional.py  test_model.py  test_quantum.py  test_train.py  test_workflows.py
